--- a/BAMXapp/Base.lproj/Main.storyboard
+++ b/BAMXapp/Base.lproj/Main.storyboard
@@ -483,6 +483,9 @@
                                                 <real key="value" value="20"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="donationStatusDidTouch:" destination="4cs-gT-MYD" eventType="touchUpInside" id="r0n-Xp-UVz"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -524,6 +527,7 @@
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="branchMapBtn" destination="aiy-a7-BWg" id="Uqw-aQ-gM8"/>
+                        <outlet property="donationStatusBtn" destination="agC-HB-rU8" id="GOb-Kz-NDE"/>
                         <outlet property="eventCardsView" destination="kHp-Xo-Z3g" id="EXy-AG-ZVQ"/>
                         <outlet property="greetLbl" destination="oZl-3l-Px7" id="cPK-Zd-SyJ"/>
                         <segue destination="VHP-MN-cqA" kind="show" identifier="showEventDetail" id="DPz-GV-W0w"/>
@@ -1319,6 +1323,96 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lPg-29-hFv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="5186.9565217391309" y="-17.410714285714285"/>
+        </scene>
+        <!--DonationStatus-->
+        <scene sceneID="c7s-6C-Q9k">
+            <objects>
+                <viewController storyboardIdentifier="donationstatus" title="DonationStatus" id="LtJ-A8-wAt" customClass="DonationStatusViewController" customModule="BAMXapp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Sw2-ca-jfy">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Estado de Donaciones" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ieS-Dr-ONx">
+                                <rect key="frame" x="35" y="79" width="344" height="36"/>
+                                <fontDescription key="fontDescription" name="Lato-Black" family="Lato" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="iOD-fw-O52">
+                                <rect key="frame" x="35" y="155" width="344" height="90"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="ZV3-kB-ljA">
+                                        <rect key="frame" x="0.0" y="0.0" width="344" height="20.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ID DE DONACIÓN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wVy-UZ-1ap">
+                                                <rect key="frame" x="0.0" y="0.0" width="150" height="20.5"/>
+                                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="15"/>
+                                                <color key="textColor" red="0.91764706370000004" green="0.24313727020000001" blue="0.3058823645" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="23IKFD03M2LF422L" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H6G-aF-Smj">
+                                                <rect key="frame" x="150" y="0.0" width="194" height="20.5"/>
+                                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="kuZ-bK-UmO">
+                                        <rect key="frame" x="0.0" y="50" width="344" height="40"/>
+                                        <subviews>
+                                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="E27-qe-jHv">
+                                                <rect key="frame" x="0.0" y="0.0" width="344" height="4"/>
+                                            </progressView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="Kez-bd-bsp">
+                                                <rect key="frame" x="0.0" y="4" width="344" height="36"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recibido" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ijh-bO-riV">
+                                                        <rect key="frame" x="0.0" y="0.0" width="57.5" height="36"/>
+                                                        <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="15"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Procesando" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mcn-zz-sq0">
+                                                        <rect key="frame" x="127.5" y="0.0" width="78" height="36"/>
+                                                        <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="15"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entregado" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hj1-LF-cjC">
+                                                        <rect key="frame" x="275" y="0.0" width="69" height="36"/>
+                                                        <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="15"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="8EL-9S-ATu"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="90" id="qKO-LQ-QLs"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="lfl-Vh-KtG"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="iOD-fw-O52" firstAttribute="leading" secondItem="lfl-Vh-KtG" secondAttribute="leading" constant="35" id="2kD-zB-fBu"/>
+                            <constraint firstItem="iOD-fw-O52" firstAttribute="top" secondItem="ieS-Dr-ONx" secondAttribute="bottom" constant="40" id="DAi-h4-eyR"/>
+                            <constraint firstItem="ieS-Dr-ONx" firstAttribute="top" secondItem="lfl-Vh-KtG" secondAttribute="top" constant="35" id="UU4-0k-efq"/>
+                            <constraint firstItem="ieS-Dr-ONx" firstAttribute="leading" secondItem="lfl-Vh-KtG" secondAttribute="leading" constant="35" id="cAc-Ol-PeM"/>
+                            <constraint firstItem="lfl-Vh-KtG" firstAttribute="trailing" secondItem="iOD-fw-O52" secondAttribute="trailing" constant="35" id="tyk-XH-QxX"/>
+                            <constraint firstItem="lfl-Vh-KtG" firstAttribute="trailing" secondItem="ieS-Dr-ONx" secondAttribute="trailing" constant="35" id="zYg-9D-HT1"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CVc-SV-pk2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5911.594202898551" y="-282.58928571428572"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="d9K-Hg-Cxc">
